--- a/src/style.css
+++ b/src/style.css
@@ -1493,12 +1493,12 @@ body {
     /*****Timeline Friends*****/
     .div-green {
         background-color: #C9FFBF;
-        margin-right: 20px;
         border-radius: 20px;
-        height: 700px;
+        height: 750px;
         display: flex;
         align-items: center;
         flex-direction: column;
+        margin-right: 50px;
     }
 
     .img-user-green {
@@ -1509,7 +1509,8 @@ body {
     }
 
     .user-Name-green{
-        font-family: 'Raleway', sans-serif;  
+        font-family: 'Raleway', sans-serif; 
+        font-size: 20px; 
     }
 
     .message-posts-green{
@@ -1518,38 +1519,59 @@ body {
         margin: 25px 15px;
 
     }
-
     .img-friend {
-        max-width: 35%;
+        width: 25%;
         border-radius: 50%;
+        height: 25%;
+        margin-right: 15px;
     }
 
+    .description-friend{
+        font-family: 'Raleway', sans-serif; 
+        font-size: 13px;
+        margin-top: 5px;
+    }
+
+    .button-follow{
+        margin-top: 8px;
+        width: 80px;
+        height: 30px;
+        border-radius: 25px;
+        background: #D9D9D9;
+        border: none;
+        font-family: 'Raleway', sans-serif; 
+        cursor: pointer;
+    }
     .div-green-input-pink {
         display: grid;
         grid-template-columns: 25% 50% 25%;
+        max-width: 1200px;
+        margin: 0 auto;
 
     }
-
-
     .div-pink-timeline {
         background: #FFAFBD;
-        margin-left: 20px;
+        margin-left: 50px;
         border-radius: 20px;
-        height: 700px;
+        height: 750px;
         display: flex;
         align-items: center;
         flex-direction: column;
-
     }
     .title-pink{
         font-family: 'Raleway', sans-serif;  
         text-align: center;
         margin: 25px 15px;
+        font-size: 20px;
     }
 
     .div-friend-profile{
     display: flex;
     flex-direction: row;
-    margin-bottom: 15px;
+    margin-bottom: 20px;
+}
+
+.div-friends{
+    margin: 0 15px;
 }
 }   
