--- a/src/style.css
+++ b/src/style.css
@@ -423,14 +423,15 @@ body {
         margin-bottom: 10px;
         width: 325px;
         border: 1px solid #194F37;
-        height: 153px;
+        height: fit-content;
         border-radius: 16px;
+        padding: 0px 5px 5px;
     }
 
     .div-user-image-and-username {
         display: flex;
         flex-direction: row;
-        margin-left: 10px;
+        margin-top: 10px;
     }
 
     .img-user-post {
@@ -449,9 +450,8 @@ body {
 
     .message-posts {
         font-family: 'Raleway', sans-serif;
-        font-size: 16px;
-        padding-left: 10px;
-        margin-top: 10px;
+        font-size: 14px;
+        padding: 10px 10px;
     }
 
     .email-user {
@@ -465,6 +465,73 @@ body {
         flex-direction: column;
         align-items: start;
     }
+
+    .div-green {
+        display: none;
+    }
+
+    .img-user-green {
+        display: none;
+    }
+
+    .user-Name-green{
+        display: none;
+    }
+
+    .message-posts-green{
+        display: none;
+
+    }
+    .img-friend {
+        display: none;
+    }
+
+    .description-friend{
+        display: none;
+    }
+
+    .button-follow{
+        display: none;
+    }
+    .div-green-input-pink {
+
+    }
+
+    .div-pink-timeline {
+        display: none;
+    }
+    .title-pink{
+        display: none;
+    }
+
+    .div-friend-profile{
+        display: none;
+    }
+
+    .div-friends{
+        display: none;
+    }
+
+    .div-groups {
+        display: none;
+    }
+
+    .div-group{
+        display: none;
+    }
+    
+    .img-group{
+        display: none;
+    }
+
+    .name-and-members{
+        display: none;
+    }
+
+    .members-group {
+        display: none;
+    }
+
 }
 
 
@@ -1483,18 +1550,67 @@ body {
         cursor: pointer;
     }
 
-    .publications-container-class {
+     /* **** Timeline Posts *****/ 
+     
+     .publications-container-class {
         display: flex;
         flex-direction: column;
         align-items: center;
         max-width: 100%;
     }
 
+    .div-user-post {
+        display: flex;
+        align-items: baseline;
+        margin-bottom: 20px;
+        border: 1px solid #194F37;
+        height: fit-content;
+        border-radius: 16px;
+        padding: 10px 20px 10px 0px;
+    }
+
+    .div-user-image-and-username {
+        display: flex;
+        flex-direction: row;
+    }
+
+    .img-user-post {
+        margin: 10px;
+        width: 20%;
+        border-radius: 50%;
+        margin-bottom: 3%;
+        border: 2px solid #9A4C4C;
+    }
+
+    .user-Name-post {
+        font-size: 20px;
+        font-family: 'Raleway', sans-serif;
+        color: #9A4C4C;
+    }
+
+    .message-posts {
+        font-family: 'Raleway', sans-serif;
+        font-size: 14px;
+        margin-top: 10px;
+    }
+
+    .email-user {
+        font-family: 'Raleway', sans-serif;
+        color: #536471;
+        font-size: 12px;
+    }
+
+    .div-name-email {
+        display: flex;
+        flex-direction: column;
+        align-items: start;
+    }
+
     /*****Timeline Friends*****/
     .div-green {
         background-color: #C9FFBF;
         border-radius: 20px;
-        height: 750px;
+        height: fit-content;
         display: flex;
         align-items: center;
         flex-direction: column;
@@ -1553,7 +1669,7 @@ body {
         background: #FFAFBD;
         margin-left: 50px;
         border-radius: 20px;
-        height: 750px;
+        height: fit-content;
         display: flex;
         align-items: center;
         flex-direction: column;
@@ -1566,12 +1682,42 @@ body {
     }
 
     .div-friend-profile{
-    display: flex;
-    flex-direction: row;
-    margin-bottom: 20px;
-}
+        display: flex;
+        flex-direction: row;
+        margin-bottom: 20px;
+    }
 
-.div-friends{
-    margin: 0 15px;
-}
+    .div-friends{
+        margin: 0 15px;
+    }
+
+    .div-groups {
+        margin: 0 15px;
+    }
+
+    .div-group{
+        display: flex;
+        flex-direction: row;
+        margin-bottom: 20px;
+    }
+    
+    .img-group{
+        width: 25%;
+        border-radius: 50%;
+        height: 25%;
+        margin-right: 15px;
+    }
+
+    .name-and-members{
+        display: flex;
+        flex-direction: column;
+    }
+
+    .members-group {
+        font-family: 'Raleway', sans-serif; 
+        font-size: 12px;
+        margin-top: 5px;
+    }
+
+
 }   
