--- a/src/style.css
+++ b/src/style.css
@@ -1741,7 +1741,7 @@ body {
         border: 1px solid #194F37;
         height: fit-content;
         border-radius: 16px;
-        padding: 10px 20px 10px 0px;
+        padding: 15px;
     }
     .div-user-and-option{
     display: flex;
@@ -1778,7 +1778,7 @@ body {
         font-family: 'Raleway', sans-serif;  
         text-align: center;
         font-size: 20px;
-        margin: 70px 0;
+        margin: 38px 0;
 
     }
 
@@ -1838,8 +1838,8 @@ body {
 
     .message-posts-green{
         font-family: 'Raleway', sans-serif;  
-        text-align: center;
-        margin: 30px 20px;
+        text-align: justify;
+        margin: 30px 36px;
         display: initial;
 
     }
